--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1> Welcome! </h1>
     Hello there, awesome person!
+    <img> https://avatars3.githubusercontent.com/u/48568602?v=4 <img>
   </body>
 </html>
