--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     Hello there, awesome person!
-    <img> https://avatars3.githubusercontent.com/u/48568602?v=4 <img>
+    <img> https://avatars3.githubusercontent.com/u/48568602?v=4
   </body>
 </html>
